--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,43 +1,4 @@
-/*-------------------------------------------------------------------------------------- 
-	Theme Name: Chamb - Responsive E-commerce HTML5 Template 
----------------------------------------------------------------------------------------- 
-    
-	1. IMPORT FILES
-	2. BASE CSS 
-	3. HEADER
-	   - Logo
-	   - Search Bar
-	4. PAGE CONTENT PRODUCT 
-	5. SECTION
-	   - Products Exciting
-	   - Start Free
-	6. PRODUCT
-	7. FOOTER
-	   - Copyright
-	8. INNER PAGE   
-	   - How it Works
-	   - About Us
-	   - Terms Page
-	   - Cooming Soon
-	   - Category
-	   - Profile
-	   - Pricing
-	   - Product Page
-	   - New Layout css
-	
---------------------------------------------------------------------------------------*/
 
-/*------------------------------------------------------------- 
-	1. IMPORT FILES
--------------------------------------------------------------*/
-
-/* @import url("https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"); */
-
-/**-- font-family: 'Raleway', sans-serif; --**/
-
-/*------------------------------------------------------------- 
-	2. BASE CSS 
--------------------------------------------------------------*/
 
 body {
     font-family: "Raleway", sans-serif;
@@ -519,15 +480,9 @@ section {
 
 .right-flag {
     display: inline-block;
-    float: right;
+    /* float: right; */
     padding: 8px 0px;
     margin-right: 25px;
-}
-
-.right-flag {
-}
-
-.right-flag li {
 }
 
 .right-flag li a {
@@ -594,12 +549,6 @@ section {
     padding: 11px;
     background: #fff;
     border-bottom: 1px solid #f5f5f5;
-}
-
-.pof-text {
-}
-
-.page-preview {
 }
 
 .preview {
